--- a/DesignPatternsArchitecture/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatternsArchitecture/DesignPatterns/DesignPatterns.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ninject" Version="3.3.6" />
+    <PackageReference Include="Polly" Version="8.4.2" />
   </ItemGroup>
 
 </Project>
